<resources>
    <string name="app_name">PingPong</string>
    <string name="log_in">Log In</string>
    <string name="you_don_t_have_an_account">You don\'t have an account ?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="ready_to_play">Ready To Play</string>
    <string name="title_content_login">title_content_login</string>

    <string name="first_time_here">First time here ?</string>
    <string name="log_in2">Log In</string>
    <string name="enter_name">Username</string>
    <string name="Password">Password</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="not_the_first_time_here">Not the first time here</string>
    <string name="log_in_here">Log in here</string>
    <string name="title_activity_sign_up2">SignUp2</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password2">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_profile">Profile</string>
    <string name="todo1mag1">TODO</string>
    <string name="difficulty">Difficulty</string>
    <string name="name2">Name:</string>
    <string name="date_played">Date Played</string>
    <string name="duration">Duration</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="machine_serial_number">Machine Serial Number:</string>
    <string name="must_be_8_digits">Must be 8 digits!!</string>
    <string name="submit">Submit</string>
    <string name="TestB">TestB</string>
    <string name="john_doe">John Doe</string>
    <string name="MNumn">000000000</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_launch">Launch</string>
    <string name="difficulty_setting">Difficulty Setting:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="launch_angle">Launch Angle:</string>
    <string name="interval_duration_seconds">Interval Duration (seconds):</string>
    <string name="submit2">Submit</string>
    <string name="next2">Next</string>
    <string name="launch_settings">Launch Settings</string>
    <string name="difficulty_level2">Difficulty Level:</string>
    <string name="launch_angle2">Launch Angle:</string>
    <string name="time_interval">Time Interval:</string>
    <string name="launch">Launch</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Launch</string>
    <string name="tab_text_3">Settings</string>
    <string name="tab_activity">This is Tabbed Activity</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="blog">App</string>
    <string name="App">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="quit_confirmation_title">Confirmation!</string>
    <string name="quit_confirmation_msg">Are you sure you want to quit?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>
