<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomegradientbg"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="175dp"
        android:layout_height="86dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="576dp"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordText2"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="363dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="228dp"
        android:layout_height="62dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="197dp"
        android:background="@drawable/loginbutton"
        android:onClick="LoginButton"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="148dp"
        android:layout_height="22dp"
        android:text="@string/not_the_first_time_here"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="588dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="83dp"
        android:layout_height="23dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/sign_up_here"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="234dp"
        tools:layout_editor_absoluteY="588dp" />
</androidx.constraintlayout.widget.ConstraintLayout>