<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomegradientbg"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="239dp"
        android:layout_height="85dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="44dp"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fnameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fnameText"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/lnameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/lnameText"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fnameText" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnameText" />

    <EditText
        android:id="@+id/cpasswordText"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="234dp"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/password2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/cpasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <Button
        android:id="@+id/SignUpbutton"
        android:layout_width="228dp"
        android:layout_height="62dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/loginbutton"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpasswordText"
        app:layout_constraintVertical_bias="0.851" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="1192dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="70dp"
        android:text="@string/not_the_first_time_here"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="642dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="70dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/log_in_here"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>