<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomegradientbg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="155dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="401dp"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="3"

        android:text="@string/ready_to_play"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Log_In"
        android:layout_width="228dp"
        android:layout_height="62dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/rounded_button"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="471dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="241dp"
        android:text="@string/you_don_t_have_an_account"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="277dp"
        android:layout_marginTop="471dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="241dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/sign_up_here"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>